[gd_scene load_steps=85 format=3 uid="uid://0afouwxdk6c"]

[ext_resource type="Script" path="res://scenes/Player1.gd" id="1_igmfy"]
[ext_resource type="Texture2D" uid="uid://hqs1hdgfwhju" path="res://assets/player/attack_right_40x40.png" id="2_6r64x"]
[ext_resource type="Texture2D" uid="uid://dcptabfqldc3c" path="res://assets/player/idle_right_40x40.png" id="3_bqfq1"]
[ext_resource type="Texture2D" uid="uid://dge5mbng6sk0o" path="res://assets/player/attack_down_40x40.png" id="3_kap3d"]
[ext_resource type="Texture2D" uid="uid://d22p4km4se52c" path="res://assets/player/attack_up_40x40.png" id="4_1miuw"]
[ext_resource type="Texture2D" uid="uid://vmqb2og2eof3" path="res://assets/player/run_right_40x40.png" id="4_aptwa"]
[ext_resource type="Texture2D" uid="uid://bkgmmcgj7kntd" path="res://assets/player/death_right_40x40.png" id="5_8qk85"]
[ext_resource type="Texture2D" uid="uid://bohfemlrrxhnh" path="res://assets/player/run_down_40x40.png" id="5_f8gx8"]
[ext_resource type="Texture2D" uid="uid://c4u1k5j1icg6u" path="res://assets/player/idle_down_40x40.png" id="6_08ckp"]
[ext_resource type="Texture2D" uid="uid://h1oj5ixn01rj" path="res://assets/player/run_up_40x40.png" id="6_k2bnx"]
[ext_resource type="Texture2D" uid="uid://ccsng42gv3453" path="res://assets/player/idle_up_40x40.png" id="7_pseve"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w6p21"]
atlas = ExtResource("3_kap3d")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lbd5"]
atlas = ExtResource("3_kap3d")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_faxio"]
atlas = ExtResource("3_kap3d")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh4p2"]
atlas = ExtResource("3_kap3d")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mryus"]
atlas = ExtResource("3_kap3d")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yttw"]
atlas = ExtResource("3_kap3d")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk1c7"]
atlas = ExtResource("3_kap3d")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7fcp"]
atlas = ExtResource("2_6r64x")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_obujm"]
atlas = ExtResource("2_6r64x")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab41m"]
atlas = ExtResource("2_6r64x")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_efkov"]
atlas = ExtResource("2_6r64x")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fif24"]
atlas = ExtResource("2_6r64x")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_07uhm"]
atlas = ExtResource("2_6r64x")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsck6"]
atlas = ExtResource("2_6r64x")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubvf5"]
atlas = ExtResource("4_1miuw")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8gv2"]
atlas = ExtResource("4_1miuw")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kw0x"]
atlas = ExtResource("4_1miuw")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_67o3j"]
atlas = ExtResource("4_1miuw")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxtkr"]
atlas = ExtResource("4_1miuw")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew3uj"]
atlas = ExtResource("4_1miuw")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo5yc"]
atlas = ExtResource("4_1miuw")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmm7v"]
atlas = ExtResource("5_8qk85")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiv2h"]
atlas = ExtResource("5_8qk85")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs10p"]
atlas = ExtResource("5_8qk85")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4cuj"]
atlas = ExtResource("5_8qk85")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbyxs"]
atlas = ExtResource("5_8qk85")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx4o6"]
atlas = ExtResource("5_8qk85")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmhxe"]
atlas = ExtResource("5_8qk85")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ddwx"]
atlas = ExtResource("5_8qk85")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gosf"]
atlas = ExtResource("5_8qk85")
region = Rect2(320, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a10i"]
atlas = ExtResource("3_bqfq1")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3hft"]
atlas = ExtResource("3_bqfq1")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggjl2"]
atlas = ExtResource("3_bqfq1")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_df00u"]
atlas = ExtResource("3_bqfq1")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugwph"]
atlas = ExtResource("6_08ckp")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkv2c"]
atlas = ExtResource("6_08ckp")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0vkh"]
atlas = ExtResource("6_08ckp")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry4aj"]
atlas = ExtResource("6_08ckp")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra7le"]
atlas = ExtResource("7_pseve")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_apdtp"]
atlas = ExtResource("7_pseve")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce6b8"]
atlas = ExtResource("7_pseve")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbiuh"]
atlas = ExtResource("7_pseve")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1f8t"]
atlas = ExtResource("4_aptwa")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrrmy"]
atlas = ExtResource("4_aptwa")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_121if"]
atlas = ExtResource("4_aptwa")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2lg7"]
atlas = ExtResource("4_aptwa")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxlmn"]
atlas = ExtResource("4_aptwa")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfwrw"]
atlas = ExtResource("4_aptwa")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_864ey"]
atlas = ExtResource("5_f8gx8")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_afnhj"]
atlas = ExtResource("5_f8gx8")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d0u5"]
atlas = ExtResource("5_f8gx8")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n0ef"]
atlas = ExtResource("5_f8gx8")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrrov"]
atlas = ExtResource("5_f8gx8")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i50c7"]
atlas = ExtResource("5_f8gx8")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3dlc"]
atlas = ExtResource("6_k2bnx")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8csho"]
atlas = ExtResource("6_k2bnx")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_884m4"]
atlas = ExtResource("6_k2bnx")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hmkn"]
atlas = ExtResource("6_k2bnx")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvdop"]
atlas = ExtResource("6_k2bnx")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh5vm"]
atlas = ExtResource("6_k2bnx")
region = Rect2(200, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_2yuxm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6p21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lbd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faxio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh4p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mryus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yttw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk1c7")
}],
"loop": false,
"name": &"attack_down",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7fcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obujm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab41m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efkov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fif24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07uhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsck6")
}],
"loop": false,
"name": &"attack_left_right",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubvf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8gv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kw0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67o3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxtkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew3uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo5yc")
}],
"loop": true,
"name": &"attack_up",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmm7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiv2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs10p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4cuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbyxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx4o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmhxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ddwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gosf")
}],
"loop": false,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a10i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3hft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggjl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df00u")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugwph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkv2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0vkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry4aj")
}],
"loop": true,
"name": &"idle_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra7le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apdtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce6b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbiuh")
}],
"loop": true,
"name": &"idle_up",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1f8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrrmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_121if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2lg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxlmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfwrw")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_864ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afnhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d0u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n0ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrrov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i50c7")
}],
"loop": true,
"name": &"run_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3dlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8csho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_884m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hmkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvdop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh5vm")
}],
"loop": true,
"name": &"run_up",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1atd"]
size = Vector2(17, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpnbv"]
size = Vector2(19, 24)

[sub_resource type="Animation" id="Animation_tumx3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHit_Right/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordHit_Down/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SwordHit_Up/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordHit_Left/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nsw5k"]
resource_name = "attack_down"
length = 0.52
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"attack_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordHit_Down/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.32, 0.48),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_fumt5"]
resource_name = "attack_left"
length = 0.52
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"attack_left_right"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordHit_Left/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.24, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_10mng"]
resource_name = "attack_right"
length = 0.52
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"attack_left_right"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordHit_Right/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.24, 0.4, 0.52),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true]
}

[sub_resource type="Animation" id="Animation_0a1go"]
resource_name = "attack_up"
length = 0.52
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"attack_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordHit_Up/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.32, 0.44),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xdve5"]
_data = {
"RESET": SubResource("Animation_tumx3"),
"attack_down": SubResource("Animation_nsw5k"),
"attack_left": SubResource("Animation_fumt5"),
"attack_right": SubResource("Animation_10mng"),
"attack_up": SubResource("Animation_0a1go")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d328x"]
size = Vector2(16, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gpv1"]
size = Vector2(15, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvifq"]
size = Vector2(15, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2onb"]
size = Vector2(15, 18)

[node name="Player1" type="CharacterBody2D"]
script = ExtResource("1_igmfy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2yuxm")
animation = &"attack_up"
autoplay = "default"
frame = 1
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_x1atd")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="EnemiesDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemiesDetection"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_tpnbv")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xdve5")
}

[node name="SwordHit_Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHit_Right"]
position = Vector2(15, 3)
shape = SubResource("RectangleShape2D_d328x")

[node name="SwordHit_Down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHit_Down"]
position = Vector2(2.5, 20)
shape = SubResource("RectangleShape2D_4gpv1")

[node name="SwordHit_Up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHit_Up"]
position = Vector2(-0.5, -13.5)
shape = SubResource("RectangleShape2D_pvifq")

[node name="SwordHit_Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHit_Left"]
position = Vector2(-16.5, 3)
shape = SubResource("RectangleShape2D_w2onb")

[connection signal="body_entered" from="EnemiesDetection" to="." method="_on_enemies_detection_body_entered"]
[connection signal="area_entered" from="SwordHit_Right" to="." method="_on_sword_hit_area_entered"]
[connection signal="area_entered" from="SwordHit_Down" to="." method="_on_sword_hit_down_area_entered"]
[connection signal="area_entered" from="SwordHit_Up" to="." method="_on_sword_hit_up_area_entered"]
[connection signal="area_entered" from="SwordHit_Left" to="." method="_on_sword_hit_left_area_entered"]
